<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="30dp"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/nombre_cliente_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre_cliente" />

            <EditText
                android:id="@+id/nombre_cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/nombre_cliente" />

            <TextView
                android:id="@+id/apellido_cliente_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/apellidos_cliente" />

            <EditText
                android:id="@+id/apellido_cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/apellidos_cliente" />

            <TextView
                android:id="@+id/dni_cliente_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dni" />

            <EditText
                android:id="@+id/dni_cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/dni" />

            <TextView
                android:id="@+id/telefono_cliente_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/telefono_cliente_label" />

            <EditText
                android:id="@+id/telefono_cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:text="@string/telefono_cliente_label" />

            <TextView
                android:id="@+id/email_cliente_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_cliente" />

            <EditText
                android:id="@+id/email_cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textEmailAddress"
                android:text="@string/email_cliente" />

            <TextView
                android:id="@+id/cif_cliente_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cif_cliente" />

            <EditText
                android:id="@+id/cif_cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/cif_cliente" />

            <TextView
                android:id="@+id/empresa_cliente_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/empresa" />

            <EditText
                android:id="@+id/empresa_cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/empresa" />

            <TextView
                android:id="@+id/direccion_cliente_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/direccion_empresa" />

            <EditText
                android:id="@+id/direccion_cliente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="@string/direccion_empresa" />
        </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>